# votechain-contracts

./: CHANGELOG.md  Cargo.toml  Dockerfile  IMPLEMENTATION_COMPLETE.md
.github/workflows/: ci.yml  release.yml
api/: Cargo.toml
api/src/: main.rs
backend/: package.json
contracts/governance/src/: lib.rs  test.rs  types.rs
contracts/token/src/: test.rs
frontend/: README.md  index.html
frontend/src/: index.css
frontend/src/components/: ProposalList.tsx
frontend/src/pages/: GovernanceDashboard.tsx  ProposalList.tsx
