[package]
name = "votechain-indexer-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.42", features = ["full"] }
utoipa = { version = "4.1", features = ["macros"] }
utoipa-swagger-ui = "4.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
